feat: Refactorización de clases, y nuevas clases implementadas